# proc-bitfield

./: CHANGELOG.md  Cargo.toml  README.md  docs.md
macros/: Cargo.toml
macros/src/: bitfield.rs  bits.rs  enum_conv.rs  lib.rs  unwrap_bitrange.rs  unwrap_bits.rs  utils.rs
src/: conv.rs  example.rs  lib.rs  nested.rs  nested_traits.rs  traits.rs
src/conv/: const_impls.rs  impls.rs  impls_nightly.rs
src/example/: support.rs
src/traits/: arr_impls.rs  int_impls.rs
tests/: int_arrays_rw_int_arrays.rs  int_arrays_rw_ints.rs  ints.rs  ints_rw_int_arrays.rs
usage_examples/: bitfield.md  bits.md  conv_raw.md  set_bits.md  unwrap_bitrange.md  unwrap_bits.md  with_bits.md
