[workspace]
members = ["macros"]

[package]
name = "proc-bitfield"
version = "0.1.0"
edition = "2021"
description = "A crate to expressively declare bitfield-like structs"
homepage = "https://github.com/Kelpsy/proc-bitfield"
repository = "https://github.com/Kelpsy/proc-bitfield"
license = "MIT OR Apache-2.0"
keywords = ["bitfield"]

[features]
nightly = ["macros/nightly"]

[dependencies]
macros = { package = "proc-bitfield-macros", version = "0.0.1" }
static_assertions = "1.1"
