[workspace]
members = ["macros"]

[package]
name = "proc-bitfield"
version = "0.2.4"
edition = "2021"
description = "A crate to expressively declare bitfield-like structs"
homepage = "https://github.com/kelpsyberry/proc-bitfield"
repository = "https://github.com/kelpsyberry/proc-bitfield"
license = "MIT OR Apache-2.0"
keywords = ["bitfield"]

[package.metadata.docs.rs]
features = ["nightly"]

[features]
nightly = ["macros/nightly"]

[dependencies]
macros = { package = "proc-bitfield-macros", version = "0.2.3" }
static_assertions = "1.1"
